--- a/package.json
+++ b/package.json
@@ -3,11 +3,15 @@
   "private": true,
   "version": "0.0.0",
   "description": "線上模擬選秀系統",
-  "keywords": ["CPBL", "draft", "sailsjs"],
+  "keywords": [
+    "CPBL",
+    "draft",
+    "sailsjs"
+  ],
   "dependencies": {
     "async": "^0.9.0",
     "ejs": "~0.8.4",
-    "grunt": "0.4.2",
+    "grunt": "1.0.1",
     "grunt-autoprefixer": "^2.1.0",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-coffee": "~0.10.1",
@@ -15,7 +19,7 @@
     "grunt-contrib-copy": "~0.5.0",
     "grunt-contrib-cssmin": "~0.9.0",
     "grunt-contrib-jst": "~0.6.0",
-    "grunt-contrib-less": "0.11.1",
+    "grunt-contrib-less": "1.3.0",
     "grunt-contrib-uglify": "~0.4.0",
     "grunt-contrib-watch": "~0.5.3",
     "grunt-sails-linker": "~0.9.5",
@@ -26,9 +30,9 @@
     "passport-facebook": "^2.0.0",
     "passport-google-oauth": "^0.2.0",
     "rc": "~0.5.0",
-    "sails": "~0.10.5",
-    "sails-disk": "~0.10.0",
-    "sails-postgresql": "^0.10.15",
+    "sails": "^0.12.3",
+    "sails-disk": "~0.10.10",
+    "sails-mysql": "^0.11.5",
     "stately.js": "^1.2.0"
   },
   "scripts": {
